manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-clusterip
  labels:
    app: api-server
spec:
  type: ClusterIP
  selector:
    app: api-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
