manifests/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-loadbalancer
  labels:
    app: web-server
spec:
  type: LoadBalancer
  selector:
    app: web-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  sessionAffinity: ClientIP
